// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksController (e2e) DELETE /api/tasks/:id SUCCESS 1`] = `Object {}`;

exports[`TasksController (e2e) DELETE /api/tasks/:id SUCCESS 2`] = `Array []`;

exports[`TasksController (e2e) GET /api/tasks FAIL (No auth) 1`] = `
Object {
  "error": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`TasksController (e2e) GET /api/tasks SUCCESS 1`] = `Array []`;

exports[`TasksController (e2e) GET /api/tasks/:id FAILURE (404) 1`] = `
Object {
  "message": "Not Found",
  "statusCode": 404,
}
`;

exports[`TasksController (e2e) GET /api/tasks/:id SUCCESS 1`] = `
Object {
  "active": true,
  "critical": true,
  "done": false,
  "id": 1,
  "timeboxes": Array [],
  "title": "Task #3",
}
`;

exports[`TasksController (e2e) POST /api/tasks SUCCESS 1`] = `
Object {
  "active": true,
  "critical": false,
  "done": false,
  "id": 1,
  "title": "Task #1",
}
`;

exports[`TasksController (e2e) PUT /api/tasks/:id SUCCESS 1`] = `
Object {
  "active": true,
  "critical": false,
  "done": true,
  "id": 1,
  "timeboxes": Array [],
  "title": "Updated task #2",
}
`;
